--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,8 +12,16 @@
   <% end %>
 
   <div class="field">
+      <%= f.label :title %><br>
+      <%= f.text_field :title %>
+  </div>
+  <div class="field">
+      <%= f.label :url %><br>
+      <%= f.text_field :url %>
+  </div>
+  <div class="field">
     <%= f.label :summary %><br>
-    <%= f.text_field :summary %>
+    <%= f.text_area :summary %>
   </div>
   <div class="actions">
     <%= f.submit %>
