--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,20 +3,11 @@
 <h1>Listing Posts</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Summary</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.summary %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to post.title, post %></td>
       </tr>
     <% end %>
   </tbody>
