--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
         <%= csrf_meta_tags %>
     </head>
     <body>
+        <%= render "refills/navigation" %>
         <script src="https://cdn.auth0.com/js/lock-7.1.min.js"></script>
         <script type="text/javascript">
 
