--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -1,44 +1,62 @@
 <header class="navigation" role="banner">
-  <div class="navigation-wrapper">
-    <a href="javascript:void(0)" class="logo">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo Image">
-    </a>
-    <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
-    <nav role="navigation">
-      <ul id="js-navigation-menu" class="navigation-menu show">
-        <li class="nav-link"><a href="javascript:void(0)">Products</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
-        <li class="nav-link more"><a href="javascript:void(0)">More</a>
-          <ul class="submenu">
-            <li><a href="javascript:void(0)">Submenu Item</a></li>
-            <li><a href="javascript:void(0)">Another Item</a></li>
-            <li class="more"><a href="javascript:void(0)">Item with submenu</a>
-              <ul class="submenu">
-                <li><a href="javascript:void(0)">Sub-submenu Item</a></li>
-                <li><a href="javascript:void(0)">Another Item</a></li>
-              </ul>
-            </li>
-            <li class="more"><a href="javascript:void(0)">Another submenu</a>
-              <ul class="submenu">
-                <li><a href="javascript:void(0)">Sub-submenu</a></li>
-                <li><a href="javascript:void(0)">An Item</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-    <div class="navigation-tools">
-      <div class="search-bar">
-        <form role="search">
-          <input type="search" placeholder="Enter Search" />
-          <button type="submit">
-            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="Search Icon">
-          </button>
-        </form>
-      </div>
-      <a href="javascript:void(0)" class="sign-up">Sign Up</a>
-    </div>
-  </div>
-</header>
+    <div class="navigation-wrapper">
+        <a href="javascript:void(0)" class="logo">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo Image">
+            </a>
+            <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+            <nav role="navigation">
+                <ul id="js-navigation-menu" class="navigation-menu show">
+                    <li class="nav-link"><a href="javascript:void(0)">Products</a></li>
+                    <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
+                    <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
+                    <li class="nav-link more"><a href="javascript:void(0)">More</a>
+                        <ul class="submenu">
+                            <li><a href="javascript:void(0)">Submenu Item</a></li>
+                            <li><a href="javascript:void(0)">Another Item</a></li>
+                            <li class="more"><a href="javascript:void(0)">Item with submenu</a>
+                                <ul class="submenu">
+                                    <li><a href="javascript:void(0)">Sub-submenu Item</a></li>
+                                    <li><a href="javascript:void(0)">Another Item</a></li>
+                                </ul>
+                            </li>
+                            <li class="more"><a href="javascript:void(0)">Another submenu</a>
+                                <ul class="submenu">
+                                    <li><a href="javascript:void(0)">Sub-submenu</a></li>
+                                    <li><a href="javascript:void(0)">An Item</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <div class="navigation-tools">
+                <div class="search-bar">
+                    <form role="search">
+                        <input type="search" placeholder="Enter Search" />
+                        <button type="submit">
+                            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="Search Icon">
+                            </button>
+                        </form>
+                    </div>
+                    <% unless @current_user %>
+                        <script src="https://cdn.auth0.com/js/lock-7.1.min.js"></script>
+                        <script type="text/javascript">
+
+                        var lock = new Auth0Lock('ccTVQCHKxUJRTc97wjgJtQOccbHSFAHf', 'nightfire.auth0.com');
+
+
+                        function signin() {
+                            lock.show({
+                                    callbackURL: 'http://localhost:3000/auth/auth0/callback'
+                                    , responseType: 'code'
+                                    , authParams: {
+                                        scope: 'openid profile'
+                                    }
+                            });
+                        }
+                        </script>
+                        <a class="sign-up" onclick="signin()">Login</a>
+                    <% end %>
+                </div>
+            </div>
+        </header>
