--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -39,23 +39,7 @@
                         </form>
                     </div>
                     <% unless @current_user %>
-                        <script src="https://cdn.auth0.com/js/lock-7.1.min.js"></script>
-                        <script type="text/javascript">
-
-                        var lock = new Auth0Lock('ccTVQCHKxUJRTc97wjgJtQOccbHSFAHf', 'nightfire.auth0.com');
-
-
-                        function signin() {
-                            lock.show({
-                                    callbackURL: 'http://localhost:3000/auth/auth0/callback'
-                                    , responseType: 'code'
-                                    , authParams: {
-                                        scope: 'openid profile'
-                                    }
-                            });
-                        }
-                        </script>
-                        <a class="sign-up" onclick="signin()">Login</a>
+                        <%= render "auth0/login" %>
                     <% end %>
                 </div>
             </div>
