Minimal css structure

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,9 @@
 @import "refills/comment";
 @import "refills/flashes";
 @import "refills/navigation";
+
+.wrapper {
+    @include outer-container(100%);
+    @import "posts";
+}
+
