Submit a link if logged in

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,5 +22,9 @@
 .wrapper {
     @include outer-container(100%);
     @import "posts";
+    .sidebar {
+        @include span-columns(2);
+        @include omega();
+    }
 }
 
