--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
 
             <%= yield %>
 
+            <div class="sidebar">
+                <%= link_to "Submit link", new_post_url %>
+            </div>
+
         </div>
     </body>
 </html>
