--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,9 @@
-<p>
-  <strong>Summary:</strong>
-  <%= @post.summary %>
-</p>
+<div>
+    <%= link_to @post.title, @post.url %>
+</div>
+<div>
+    <%= @post.summary %>
+</div>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
